Build both under jdk 1.6 and 1.5; site and reports are generated under 1.5 only, and the deployed artifacts are those from the 1.5 build.
git-svn-id: http://svn.topazproject.org/svn/head@5778 48088309-b40f-0410-b149-b14953253675